widgetized toneslider and added 3 copies to main window

--- a/tone_slider/CMakeLists.txt
+++ b/tone_slider/CMakeLists.txt
@@ -21,6 +21,8 @@ set(PROJECT_SOURCES
         toneslider.ui
 	sineloop.cpp
 	sineloop.h
+	mainwindow.h
+	mainwindow.cpp
 )
 
 # Handle stk includes and macros
