added a bunch more instruments to mixer

--- a/tone_slider/CMakeLists.txt
+++ b/tone_slider/CMakeLists.txt
@@ -23,10 +23,7 @@ set(PROJECT_SOURCES
 	sineloop.h
 	mainwindow.h
 	mainwindow.cpp
-	instrumentslider.h
-	instrumentslider.cpp
-	instrumentplayer.h
-	instrumentplayer.cpp
+	mainwindow.ui
 )
 
 # Handle stk includes and macros
