added circular buffer for fft input

--- a/instrument_mixer/CMakeLists.txt
+++ b/instrument_mixer/CMakeLists.txt
@@ -25,6 +25,7 @@ set(PROJECT_SOURCES
 	spectrogram.cpp
 	spectrogram.h
 	spectrogram.ui
+	circularbuffer.hpp
 )
 
 include_directories(C:/proj/synth/thirdparty/eigen)
